# WvW-Fight-Analysis-Addon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release-to-public.yml
src/: BarTemplate.cpp  BarTemplate.h  Resource.rc  Settings.cpp  Settings.h  Shared.cpp  Shared.h  WvWFightAnalysis.vcxproj  WvWFightAnalysis.vcxproj.filters  autoversion.h  autoversion.rc  entry.cpp  evtc_parser.cpp  evtc_parser.h  gui.cpp  gui.h  resource.h  utils.cpp  utils.h
src/include/gui/: ContentState.h  PieChart.h
src/include/gui/windows/: MainWindow.h  OptionsWindow.h  WidgetWindow.h
src/include/integration/: MursaatPanelIntegration.h
src/include/parser/: directory_monitor.h  evtc_parser.h  file_helpers.h
src/include/settings/: Settings.h
src/include/shared/: Shared.h
src/include/utils/: Utils.h
src/scripts/: gen-version.ps1
src/src/gui/: BarTemplate.cpp  PieChart.cpp
src/src/gui/windows/: AggregateWindow.cpp  MainWindow.cpp  OptionsWindow.cpp  WidgetWindow.cpp
src/src/integration/: MursaatPanelIntegration.cpp
src/src/parser/: directory_monitor.cpp  evtc_parser.cpp  file_helpers.cpp  statistics_helper.cpp
src/src/settings/: Settings.cpp
src/src/shared/: Shared.cpp
src/src/utils/: utils.cpp
